--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-react-2",
   "version": "0.1.0",
-  "homepage": "http://ancosta993.github.io/react-portfolio",
+  "homepage": "http://ancosta993.github.io/portfolio-react",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
