--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-react-2",
+  "name": "portfolio-react",
   "version": "0.1.0",
   "homepage": "http://ancosta993.github.io/portfolio-react",
   "private": true,
